<resources>
    <string name="app_name">MyBizness</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="myBizness">MyBizness</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_myBizness">Welcome to\n MyBizness!</string>
    <string name="mybizness_page">MY BIZNESS PAGE</string>
    <string name="profile_text">Profile</string>
    <string name="stats_text">Statistics</string>
    <string name="visits">Visits</string>
    <string name="intro_bizpage">Let\s get started with \nyour Bizness Page!</string>
    <string name="tutorial_next">NEXT</string>
    <string name="continue_survey">Continue with tutorial</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="agreement">By continuing, you agree to our </string>
    <string name="terms_of_service"> Terms of Service</string>
</resources>
