<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/default_bg"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mybizness_text"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome_myBizness"
                    android:textSize="42sp"
                    android:textColor="@color/quetzal_orange"
                    android:drawableBottom="@drawable/welcome_line"
                    android:drawablePadding="6dp"
                    android:paddingBottom="20dp"
                    />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mybiz_page_button"
                android:background="@color/quetzal_orange"
                android:text="@string/mybizness_page"
                android:textColor="@color/white"
                />
            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activity_horizontal_margin" />

            <!--                 android:layout_weight="2" -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:id="@+id/main_profile_layout"
                android:background="@drawable/profile_background"
                android:paddingRight="@dimen/spacing_margin"
                android:paddingLeft="@dimen/spacing_margin"
                android:paddingTop="@dimen/spacing_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:clickable="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_text"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/quetzal_orange"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_pic_main"
                    android:src="@drawable/profile_pic_container_large"
                    android:layout_centerInParent="true"
                    android:paddingBottom="@dimen/spacing_margin"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/profile_settings"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_settings_black_48dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_fullname"
                    android:text="James Harden"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/profile_pic_main"
                    />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activity_horizontal_margin" />

            <!--                android:layout_weight="3" -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/spacing_margin"
                android:paddingLeft="@dimen/spacing_margin"
                android:paddingTop="@dimen/spacing_margin"
                android:background="@color/quetzal_orange"
                android:paddingBottom="6dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_text"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/company_stats_pic"
                    android:src="@drawable/profile_pic_container_large"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:paddingBottom="36dp"
                   />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:id="@+id/visits_num"
                            android:text="300"
                            android:textSize="@dimen/stats_size"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Visits"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/stats_line"
                        android:layout_weight="1"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:id="@+id/sales_num"
                            android:text="102"
                            android:textSize="@dimen/stats_size"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sales"
                            android:layout_gravity="center"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/stats_line"
                        android:layout_weight="1"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:id="@+id/likes_num"
                            android:text="193"
                            android:textSize="@dimen/stats_size"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Likes"
                            android:textSize="16sp"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/stats_line"
                        android:layout_weight="1"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:id="@+id/reviews_num"
                            android:text="54"
                            android:textSize="@dimen/stats_size"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Reviews"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</android.support.v4.widget.DrawerLayout>
